--- a/index.html
+++ b/index.html
@@ -31,21 +31,23 @@
         <li><a href="#" class="app" id="btn">Applications</a>
           <ul class="submenu-app" id="list">
             <li><p>Other Employement</p></li>
-            <li><a href="https://forms.gle/hBCZMzw2pLfS2e6W8">Great Liberty Imports</a></li>
-            <li><a href="https://forms.gle/cdYFiZHXAu7uQQPy7">Great Liberty Real Estate</a></li>
-            <li><a href="https://forms.gle/ra4v7rLgMGCqKB3v9">Great Liberty Motors</a></li>
+            <li><a href="https://forms.gle/hBCZMzw2pLfS2e6W8">PDM</a></li>
+            <li><a href="https://forms.gle/cdYFiZHXAu7uQQPy7">Real Estate</a></li>
+            <li><a href="https://forms.gle/ra4v7rLgMGCqKB3v9">Mechanic</a></li>
+            <li><a href="#">BurgerShot</a></li>
             <li><p>Emergency Services</p></li>
-            <li><a href="https://forms.gle/JEkZXVMvBr11M68X6">San Andreas State Troopers</a></li>
-            <li><a href="https://forms.gle/C5hnYKvPvPUvLv7BA">Medical Response Team</a></li>
+            <li><a href="#">Judge(N/A)</a></li>
+            <li><a href="#">Lawyer(N/A)</a></li>
+            <li><a href="https://forms.gle/JEkZXVMvBr11M68X6">Police Department</a></li>
+            <li><a href="https://forms.gle/C5hnYKvPvPUvLv7BA">EMS - Fire & Rescue</a></li>
             <li><p>Staff Team</p></li>
             <li><a href="#">Moderator</a></li>
             <li><a href="https://forms.gle/EDpfswTj9PZaJBSA6">Staff Member</a></li>
-            <li><a href="https://forms.gle/vFbKuDcZeGCPQjX48">Developer</a></li>
+            <li><a href="https://forms.gle/vFbKuDcZeGCPQjX48">Developers</a></li>
           </ul>
         </li>
         <li><a href="https://discord.gg/S7jubcUdCV">Join Us</a></li>
         <li><a href="https://www.patreon.com/greatlibertyrp">Donate</a></li>
-        <li><a href="livemap/index.html">Live Map(Not Working)</a></li>
         <ul class="list-inline-nav">
           <a href="https://discord.gg/S7jubcUdCV">
             <i class="fab fa-discord fa-2x"></i>
@@ -74,7 +76,7 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
             <h2 class="aboutus">About Us</h2>
-            <p class="lead">We enjoy providing the FiveM community with a place to come to and just relax with a little roleplaying. We are striving to be one of the best servers out there and without each and every one of you, this won't be possible. Thank you for your support! Be safe out there and enjoy!
+            <p class="lead">Thank you for joining our server. We appreciate you being here and enjoying our FiveM community along with us. We strive to create a fun environment to foster creativity and entertainment for our players. We pride ourselves on being one of the fastest growing Serious-RP servers, and have the goal of becoming a recongnized QB RP server within FiveM. As you continue to grow with us, you’ll see some of the utilities in place to help us accomplish this goal.
             </p>
           </div>
         </div>
@@ -96,14 +98,14 @@
             <div class="service-item">
               <img src="img/bama94.png" alt="logo" class="logo">
               <h3>Bama94#1994</h3>
-              <h4>Owner/Dev</h4>
+              <h4>Owner - Developer</h4>
             </div>
           </div>
           <div class="col-md-2 text-center">
             <div class="service-item">
               <img src="img/coleslaw.png" alt="logo" class="logo">
               <h3>coleslaw#4767</h3>
-              <h4>Owner</h4>
+              <h4>Owner - Partial Developer</h4>
             </div>
           </div>
           <div class="col-md-2 text-center">
